# rover

./: .gitignore  README.md
rover_control/: CMakeLists.txt
rover_description/: package.xml
rover_driver/: package.xml
rover_gazebo/: CMakeLists.txt
rover_planner/: CMakeLists.txt  package.xml
src/rover_control/: CMakeLists.txt  package.xml
src/rover_control/include/rover_control/: udp_communication.h
src/rover_control/src/: motion_control_node.cpp  path_tracking_node.cpp  udp_communication.cpp
src/rover_description/: CMakeLists.txt
src/rover_description/urdf/: rover.xacro
src/rover_driver/: CMakeLists.txt
src/rover_gazebo/: CMakeLists.txt  package.xml
src/rover_gazebo/launch/: gazebo_sim.launch.py  nav_demo.launch.py  slam_mapping.launch.py
src/rover_gazebo/worlds/: my_room.world
src/rover_gazebo/worlds/Untitled/: model.sdf
src/rover_interfaces/: package.xml
src/rover_planner/: CMakeLists.txt  package.xml
src/rover_planner/config/: planner_params.yaml
src/rover_planner/include/rover_planner/: astar.hpp  bspline_optimizer.hpp
src/rover_planner/launch/: planner_launch.py
src/rover_planner/maps/: my_room.pgm  my_room.yaml
src/rover_planner/src/: astar.cpp  bspline_optimizer.cpp  grid_map.cpp  planner_node.cpp  rover_planner_node.cpp
